lots of page bug visual fixes, including hamburger icon, x icon, logo sizes on mobile, blog preview, color, etc.

--- a/css/qiancapital.webflow.css
+++ b/css/qiancapital.webflow.css
@@ -1242,6 +1242,10 @@ figcaption {
   border-top: 1px solid var(--gold);
 }
 
+.section.bg-dark-tone.border-top-dark {
+  border-top: 1px solid var(--dark-tone);
+}
+
 .section.bg-dark-tone.icon-features, .section.bg-dark-tone.large-quote-section {
   padding-top: 48px;
 }
@@ -1522,6 +1526,10 @@ figcaption {
 
 .button.inside-nav-menu {
   display: none;
+}
+
+.button.inside-nav-menu.greenbar {
+  background-color: var(--mid-tone);
 }
 
 .button.light-button {
@@ -1916,14 +1924,16 @@ figcaption {
 }
 
 .menu-button-cross-line {
-  background-color: #262626;
+  /*background-color: #262626;*/
+  background-color: var(--white);
   width: 75%;
   height: 2px;
   position: absolute;
 }
 
 .menu-button-horizontal-line {
-  background-color: #262626;
+  /*background-color: #262626;*/
+  background-color: var(--white);
   width: 100%;
   height: 2px;
 }
@@ -5219,6 +5229,10 @@ figcaption {
     background-color: var(--white);
   }
 
+  .menu-button-cross-line.line-1.dark, .menu-button-cross-line.line-2.dark, .menu-button-horizontal-line.line-1.dark, .menu-button-horizontal-line.line-2.dark, .menu-button-horizontal-line.line-3.dark {
+    background-color: var(--dark-tone);
+  }
+
   .navbar-row {
     grid-column-gap: 30px;
     grid-row-gap: 30px;
@@ -5367,6 +5381,14 @@ figcaption {
     position: static;
   }
 
+  .dropdown-wide-dark {
+    border-top-style: none;
+    border-bottom-style: none;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    position: static;
+  }
+
   .dropdown-box-link {
     grid-column-gap: 72px;
     grid-row-gap: 72px;
@@ -5393,6 +5415,13 @@ figcaption {
   }
 
   .dropdown-list {
+    border-style: none;
+    padding-left: 0;
+    padding-right: 0;
+    position: static;
+  }
+
+  .dropdown-list-dark {
     border-style: none;
     padding-left: 0;
     padding-right: 0;
@@ -6803,7 +6832,7 @@ figcaption {
   }
 
   .footer-logo-image {
-    max-height: 42px;
+    max-height: 62px;
   }
 
   .dropdown-box-link {
